--- a/src/Views/AddProgramareFrame.form
+++ b/src/Views/AddProgramareFrame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="8" column-count="20" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="150" bottom="15" right="150"/>
     <constraints>
-      <xy x="20" y="-4" width="1149" height="352"/>
+      <xy x="20" y="-4" width="1177" height="352"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
@@ -166,9 +166,7 @@
           <grid row="2" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <model>
-            <item value="Masaj de relaxare"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="ed4d4" class="javax.swing.JButton" binding="adaugăIntervalButton" default-binding="true">
